# autoanything

./: .gitignore  CLAUDE.md  CREATE_PROBLEM.md  MIGRATING.md  PLAN.md  PLAN_FRAMEWORK.md  PLAN_SCORING.md  PLAN_SIMPLIFY.md  README.md  WEB_LISTENER_PLAN.md  agent_instructions.md  dashboard.html  leaderboard.md  prepare.py  problem.yaml  program.md  pyproject.toml  signals.json  signals.md  train.py
.github/workflows/: evaluate.yml
autoanything/: __init__.py  cli.py  evaluator.py  models.py  scaffold.py
context/: README.md  __init__.py  prepare.py
docs/: agent-guide.md  agent-protocol.md  agents.md  create-problem.md  darwinderby.md  evaluator.md  getting-started.md  local-evaluator.md  problem-owner-guide.md  problem-owners.md  scoring.md
examples/: README.md
examples/fib/: agent_instructions.md  problem.yaml
examples/fib/context/: problem.py
examples/fib/state/: fib.py
examples/gpt/: agent_instructions.md  problem.yaml
examples/packing/: agent_instructions.md  problem.yaml
examples/prompt-optimization/: README.md  agent_instructions.md  leaderboard.md  problem.yaml
examples/prompt-optimization/context/: few_shot_examples.md  task.md
examples/prompt-optimization/state/: prompt.md
examples/prompt-optimizer/: README.md  agent_instructions.md  leaderboard.md  problem.yaml
examples/prompt-optimizer/context/: examples.jsonl
examples/rastrigin/: agent_instructions.md  problem.yaml
examples/tsp/: agent_instructions.md  problem.yaml
plans/: DARWIN_DERBY.md  PLAN_SCORING.md
src/autoanything/: __init__.py  __main__.py  cli.py  evaluator.py  leaderboard.py  problem.py  runner.py  scaffold.py  server.py
src/autoanything/templates/: gitignore  (+3 more)
src/darwinderby/: __init__.py  cli.py  evaluator.py  git.py  history.py  plotting.py  problem.py  runner.py  scoring.py  server.py
state/: README.md  __init__.py  train.py
strategies/: conservative.md  crossover.md  radical.md  specialist.md
test_problems/: README.md  activate.sh  plot_progress.py  run_test.py
test_problems/packing/: agent_instructions.md  problem.yaml
test_problems/rastrigin/: agent_instructions.md  problem.yaml
test_problems/tsp/: agent_instructions.md  problem.yaml
tests/: conftest.py  test_autoanything.py  test_cli.py  test_evaluator.py  test_git.py  test_history.py  test_integration.py  test_leaderboard.py  test_problem.py  test_scaffold.py  test_scoring.py  test_server.py
(+14 files in other folders)
