[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"

[project]
name = "autoanything"
version = "0.1.0"
description = "Autonomous optimization via AI agent swarms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "fastapi>=0.115.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "rich>=13.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
autoanything = "autoanything.cli:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=7.0",
]
