[build-system]
requires = ["uv_build>=0.7.2,<0.8"]
build-backend = "uv_build"

[project]
name = "darwinderby"
version = "0.1.0"
description = "Agents compete, the best solution survives"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "fastapi>=0.115.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "matplotlib>=3.10",
    "rich>=13.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
derby = "darwinderby.cli:main"

[project.optional-dependencies]
llm = [
    "anthropic>=0.45",
    "openai>=1.60",
]
dev = [
    "httpx>=0.27",
    "pytest>=7.0",
]
gpu = [
    "kernels>=0.11.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
